--- a/src/app/customers/customers.page.html
+++ b/src/app/customers/customers.page.html
@@ -1,14 +1,17 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title >Customers</ion-title>
+    <ion-title size="large">Customers</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  
+  <ion-searchbar [(ngModel)]="name" placeholder="Search by name"></ion-searchbar>
   <ion-list>
-    <ion-item *ngFor="let customer of customers ">
+    <ion-item *ngFor="let customer of customers | searchByName : name">
       <ion-label>{{customer.name}}</ion-label>
       <ion-label>{{customer.contactNumber}}</ion-label>
     </ion-item>
   </ion-list>
+  
 </ion-content>
