--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,12 +3,12 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="customers">
       <ion-icon name="albums"></ion-icon>
-      <ion-label>List</ion-label>
+      <ion-label>Customers</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="addcustomer">
       <ion-icon name="add-circle"></ion-icon>
-      <ion-label>Add</ion-label>
+      <ion-label>Add Customer</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
